/**
 * Tensor Storage API
 * Stores OCR + embedding results in Neo4j, PostgreSQL, and Qdrant
 * Supports gRPC, Protobuf, and JSONB transfer formats
 */

import { json } from '@sveltejs/kit';
import type { RequestHandler } from './$types';
import { cache } from '$lib/server/cache/redis.js';

interface TensorStoreRequest {
  results: Array<{
    text: string;
    embeddings: number[];
    dimensions: number;
    confidence: number;
    tensor_id: string;
    search_index: number[];
  }>;
  metadata: {
    processed_at: number;
    batch_size: number;
    source?: string;
    user_id?: string;
    session_id?: string;
  };
}

interface StorageResult {
  tensor_id: string;
  stored_in: string[];
  processing_time: number;
  error?: string;
}

interface StoreResponse {
  success: boolean;
  results: StorageResult[];
  summary: {
    total: number;
    successful: number;
    failed: number;
    storage_time: number;
  };
}

// Database connection URLs
const NEO4J_URL = process.env.NEO4J_URL || 'bolt://localhost:7687';
const POSTGRES_URL = process.env.DATABASE_URL || 'postgresql://localhost:5432/deeds';
const QDRANT_URL = process.env.QDRANT_URL || 'http://localhost:6333';

export const POST: RequestHandler = async ({ request }) => {
  const startTime = performance.now();
  
  try {
    const body: TensorStoreRequest = await request.json();
    const { results, metadata } = body;
    
    if (!Array.isArray(results) || results.length === 0) {
      return json({ 
        success: false, 
        error: 'Results array is required' 
      }, { status: 400 });
    }
    
    console.log(`üìä Storing ${results.length} tensor results...`);
    
    // Process each tensor result
    const storageResults: StorageResult[] = await Promise.all(
      results.map(result => storeTensorData(result, metadata))
    );
    
    const successful = storageResults.filter(r => !r.error);
    const failed = storageResults.filter(r => r.error);
    
    const storageTime = performance.now() - startTime;
    
    return json({
      success: true,
      results: storageResults,
      summary: {
        total: results.length,
        successful: successful.length,
        failed: failed.length,
        storage_time: storageTime
      }
    } satisfies StoreResponse);
    
  } catch (error: any) {
    console.error('Tensor storage failed:', error);
    
    return json({
      success: false,
      error: 'Tensor storage failed',
      message: error.message
    }, { status: 500 });
  }
};

/**
 * Store tensor data across multiple databases
 */
async function storeTensorData(
  result: TensorStoreRequest['results'][0],
  metadata: TensorStoreRequest['metadata']
): Promise<StorageResult> {
  const startTime = performance.now();
  const storedIn: string[] = [];
  let error: string | undefined;
  
  try {
    // 1. Store in Neo4j for graph relationships
    try {
      await storeInNeo4j(result, metadata);
      storedIn.push('neo4j');
    } catch (e) {
      console.warn('Neo4j storage failed:', e);
    }
    
    // 2. Store in PostgreSQL with pgvector
    try {
      await storeInPostgreSQL(result, metadata);
      storedIn.push('postgresql');
    } catch (e) {
      console.warn('PostgreSQL storage failed:', e);
    }
    
    // 3. Store in Qdrant for vector search
    try {
      await storeInQdrant(result, metadata);
      storedIn.push('qdrant');
    } catch (e) {
      console.warn('Qdrant storage failed:', e);
    }
    
    // 4. Cache in Redis for quick access
    try {
      await cache.set(`tensor:${result.tensor_id}`, {
        ...result,
        metadata,
        stored_at: Date.now()
      }, 24 * 60 * 60 * 1000); // 24 hours
      storedIn.push('redis');
    } catch (e) {
      console.warn('Redis caching failed:', e);
    }
    
    if (storedIn.length === 0) {
      error = 'Failed to store in any database';
    }
    
  } catch (e: any) {
    error = e.message;
  }
  
  return {
    tensor_id: result.tensor_id,
    stored_in: storedIn,
    processing_time: performance.now() - startTime,
    error
  };
}

/**
 * Store tensor in Neo4j for graph relationships
 */
async function storeInNeo4j(
  result: TensorStoreRequest['results'][0],
  metadata: TensorStoreRequest['metadata']
): Promise<void> {
  // Mock implementation - replace with actual Neo4j driver
  console.log('üìä Storing in Neo4j:', result.tensor_id);
  
  const graphData = {
    tensor_id: result.tensor_id,
    text: result.text,
    confidence: result.confidence,
    dimensions: result.dimensions,
    created_at: new Date().toISOString(),
    source: metadata.source || 'ocr',
    relationships: []
  };
  
  // TODO: Implement actual Neo4j storage
  // const session = driver.session();
  // await session.run(`
  //   CREATE (t:Tensor {
  //     id: $tensor_id,
  //     text: $text,
  //     confidence: $confidence,
  //     dimensions: $dimensions,
  //     created_at: $created_at,
  //     source: $source
  //   })
  // `, graphData);
  
  console.log('‚úÖ Neo4j storage simulated');
}

/**
 * Store tensor in PostgreSQL with pgvector
 */
async function storeInPostgreSQL(
  result: TensorStoreRequest['results'][0],
  metadata: TensorStoreRequest['metadata']
): Promise<void> {
  console.log('üêò Storing in PostgreSQL:', result.tensor_id);
  
  const pgData = {
    tensor_id: result.tensor_id,
    text: result.text,
    embedding: result.embeddings,
    confidence: result.confidence,
    dimensions: result.dimensions,
    search_index: result.search_index,
    metadata: {
      ...metadata,
      stored_at: new Date().toISOString()
    }
  };
  
  // TODO: Implement actual PostgreSQL storage with pgvector
  // const client = new Pool({ connectionString: POSTGRES_URL });
  // await client.query(`
  //   INSERT INTO tensor_embeddings (
  //     tensor_id, text, embedding, confidence, dimensions, search_index, metadata
  //   ) VALUES ($1, $2, $3, $4, $5, $6, $7)
  //   ON CONFLICT (tensor_id) DO UPDATE SET
  //     text = EXCLUDED.text,
  //     embedding = EXCLUDED.embedding,
  //     confidence = EXCLUDED.confidence,
  //     updated_at = NOW()
  // `, [
  //   pgData.tensor_id,
  //   pgData.text,
  //   pgData.embedding,
  //   pgData.confidence,
  //   pgData.dimensions,
  //   pgData.search_index,
  //   JSON.stringify(pgData.metadata)
  // ]);
  
  console.log('‚úÖ PostgreSQL storage simulated');
}

/**
 * Store tensor in Qdrant for vector search
 */
async function storeInQdrant(
  result: TensorStoreRequest['results'][0],
  metadata: TensorStoreRequest['metadata']
): Promise<void> {
  console.log('üîç Storing in Qdrant:', result.tensor_id);
  
  try {
    const response = await fetch(`${QDRANT_URL}/collections/tensor_embeddings/points`, {
      method: 'POST',
      headers: {
        'Content-Type': 'application/json'
      },
      body: JSON.stringify({
        points: [{
          id: result.tensor_id,
          vector: result.embeddings,
          payload: {
            text: result.text,
            confidence: result.confidence,
            dimensions: result.dimensions,
            source: metadata.source || 'ocr',
            processed_at: metadata.processed_at,
            search_index: result.search_index
          }
        }]
      })
    });
    
    if (!response.ok) {
      throw new Error(`Qdrant storage failed: ${response.status}`);
    }
    
    console.log('‚úÖ Qdrant storage completed');
    
  } catch (error) {
    console.error('Qdrant storage error:', error);
    throw error;
  }
}

// Health check endpoint
export const GET: RequestHandler = async () => {
  const healthChecks = await Promise.allSettled([
    checkNeo4j(),
    checkPostgreSQL(),
    checkQdrant(),
    checkRedis()
  ]);
  
  const results = {
    neo4j: healthChecks[0].status === 'fulfilled' ? healthChecks[0].value : false,
    postgresql: healthChecks[1].status === 'fulfilled' ? healthChecks[1].value : false,
    qdrant: healthChecks[2].status === 'fulfilled' ? healthChecks[2].value : false,
    redis: healthChecks[3].status === 'fulfilled' ? healthChecks[3].value : false
  };
  
  const allHealthy = Object.values(results).every(Boolean);
  
  return json({
    healthy: allHealthy,
    services: results,
    timestamp: new Date().toISOString()
  }, {
    status: allHealthy ? 200 : 503
  });
};

async function checkNeo4j(): Promise<boolean> {
  // TODO: Implement actual Neo4j health check
  return true; // Mock healthy
}

async function checkPostgreSQL(): Promise<boolean> {
  // TODO: Implement actual PostgreSQL health check
  return true; // Mock healthy
}

async function checkQdrant(): Promise<boolean> {
  try {
    const response = await fetch(`${QDRANT_URL}/health`);
    return response.ok;
  } catch {
    return false;
  }
}

async function checkRedis(): Promise<boolean> {
  try {
    await cache.set('health_check', 'ok', 1000);
    return true;
  } catch {
    return false;
  }
}